@@ -10,7 +10,7 @@
 \newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
 \newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
 
-\section{Changes in CHNOSZ version 1.4.0-31 (2021-03-22)}{
+\section{Changes in CHNOSZ version 1.4.0-35 (2021-04-07)}{
 
   \subsection{NEW FEATURES}{
     \itemize{
@@ -94,6 +94,9 @@
 
       \item Add option \code{thermo()$opt$ionize.aa} to control calculation of
       properties of ionized proteins in \code{affinity()}.
+
+      \item Fix bug where protein ionization calculations were incorrected
+      affected by the setting of \code{E.units()}.
 
     }
   }
